--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ section {
 }
 
 #download-cv-btn:hover {
-    background-color: #000000;
+    background-color: #277a9b;
     transform: scale(1.1);
 }
 
